--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/03a4dd6117.js" crossorigin="anonymous"></script>
-    <title>Vue intro</title>
+    <title>To-Do List 2: Trabajando con props</title>
   </head>
   <body>
     <div id="app"></div>
